

                        CHANGES

In this files, you will find changes between java OMiSCID versions.

1.0.2
        fix: implemented properly the sendToOneClient using a ServiceProxy
        impr: performance improvement for introspection connections
        fix: added missing stream closing causing problems with numerous variable change notification
        impr: made some exceptions RuntimeException

1.0.1
r1463
        fix: made variable subscription working properly from the common api
        fix: removed deadlock happening in some stressing tests
        fix: peer id propagation to the connectors after registration

1.0.0
        first release