@@ -5,10 +5,11 @@
 In this files, you will find changes between java OMiSCID versions.
 
 1.0.2
-        fix: implemented properly the sendToOneClient using a ServiceProxy
+        fix:  implemented properly the sendToOneClient using a ServiceProxy
         impr: performance improvement for introspection connections
-        fix: added missing stream closing causing problems with numerous variable change notification
+        fix:  added missing stream closing causing problems with numerous variable change notification
         impr: made some exceptions RuntimeException
+        fix:  removed some more synchronization to allow to findService while doing other operations
 
 1.0.1
 r1463
